	incarnation for users of SNMP traps and threshold monitoring.
	On some systems, using it may speed up Cricket by 10-15%.

	Fix mtargets bugs w.r.t. MiXeD CaSe names (hopefully for good)
	[bug #521367]

	Fix graph scaling with explicit "bytes=false", which was
	misinterpreted by the graphing code.

	Updated getFormat.c from John Woolner. Patch #454472.

New features, fixes in version 1.0.3

	The many disk accesses to the config database that collector
	uses are causing the collector to run slowly on sites with
	huge config trees. Starting with 1.0.3, the entire config
	tree is slurped into memory. This causes a significant speedup
	at the expense of collectors memory size. The database access
	method can be set to "lookup" in cricket-conf.pl to revert
	to the old behavior if collector memory footprint is of greater
	concern to you than its hammering on the disk.

	A new way of configuring Cricket has been added. It is now
	possible to create a file called cricket-conf.pl, which can
	either reside in the same directory as the grapher.cgi
	and collector scripts, or in /usr/local/etc. This should
	eliminate the need to edit grapher.cgi, and make life easier
	for people running Cricket on NT. The change should be
	backwards compatible, please file a bug on Sourceforge if it
	is not. A sample file is provided as cricket-conf.pl.sample.

	The implementation of the MAIL action tag for monitor thresholds
	is complete. New VarBinds added for SNMP trap monitor thresholds.
	Added a new monitor threshold type, quotient. Revised and extended
	monitor threshold documentation. Added "exact" monitor type.

	A new config option, show-path, was added that allows the
	display of the current path in the config tree with clickable
	links for easier backtracking. Defaults to "no".

	Support for SNMP version 2, as well as for the additional
	options that SNMP_Session now offers has been added to
	the sample-config/Defaults file. For existing installations,