@@ -522,6 +522,14 @@ inst-names =   "('Port 1 Ethernet', 'Port 2 Ethernet',
               as long as you close all tags that you open.
             </p>
           </dd>
+          <dt><tt>show-path</tt></dt>
+          <dd>Default value: <i>false</i>
+            <p>
+              When set to <var>true</var>, the current path will be displayed
+              in the header for the affected target; with hyperlinked
+              path components for easier navigation in the tree.
+            </p>
+          </dd>
           <dt><tt>snmp</tt></dt>
           <dd>Default value: <i>none</i>
             <p>
